one set of percentageOff, amountOff, and amount properties for all types of promotion rewards

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Mar 02 14:44:55 EST 2012
+#Mon Mar 05 20:22:28 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -408,8 +408,7 @@ admin.promotion.delete_confirm=Are you sure you want to delete this promotion?
 admin.promotion.delete_nav=Delete
 admin.promotion.delete_success=Promotion was deleted successfully
 admin.promotion.detail=Promotion Detail
-admin.promotion.detail.addPromotionRewardProduct=Add Product Reward
-admin.promotion.detail.addPromotionRewardShipping=Add Shipping Reward
+admin.promotion.detail.addPromotionReward=Add Promotion Reward
 admin.promotion.detail.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
 admin.promotion.detail.tabDescription=Description
 admin.promotion.detail.tabPromotionCodes=Promotion Codes
@@ -821,14 +820,11 @@ entity.Order.taxtotal=Tax Total
 entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
-entity.PromotionRewardProduct.itemDiscountType=Discount Type
+entity.PromotionRewardProduct.discountType=Discount Type
 entity.PromotionRewardProduct.options=Options
 entity.PromotionRewardProduct.roundingRule=Rounding Rule
-entity.PromotionRewardShipping.shippingAmount=Shipping Rate Fixed Amount
-entity.PromotionRewardShipping.shippingAmountOff=Shipping Rate Amount Off
-entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
+entity.PromotionRewardShipping.discountType=Shipping Discount Type
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
-entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.Vendor.brands=Brands Offered
@@ -1221,14 +1217,17 @@ entity.promotionCode.promotionCode=Promotion Code
 entity.promotionCode.promotionCode_validateUnique=This promotion code is already in use.
 entity.promotionCode.startDateTime=Start Date
 entity.promotionReward=Promotion Reward
+entity.promotionReward.amount=Fixed Amount
+entity.promotionReward.amountOff=Amount Off
 entity.promotionReward.delete_success=Promotion Reward Deleted
 entity.promotionReward.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
+entity.promotionReward.percentageOff=Percentage Off
 entity.promotionReward.promotionRewardType.product=Product
 entity.promotionReward.promotionRewardType.shipping=Shipping
 entity.promotionReward.rewardType=Reward Type
-entity.promotionRewardProduct.itemAmount=Item Fixed Amount
-entity.promotionRewardProduct.itemAmountOff=Item Amount Off
-entity.promotionRewardProduct.itemPercentageOff=Item % Off
+entity.promotionReward.rewardType.Order=Order
+entity.promotionReward.rewardType.Product=Product
+entity.promotionReward.rewardType.Shipping=Shipping
 entity.promotionRewardProduct.itemRewardQuantity=Quantity
 entity.promotionRewardProduct.productTypes=Product Types
 entity.promotionRewardProduct.products=Products
