rb updates for promotion rewards

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 05 20:22:28 EST 2012
+#Mon Mar 05 20:53:30 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -819,11 +819,20 @@ entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
 entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
 entity.PriceGroupRate.roundingRule=Rounding Rule
+entity.PromotionRewardOrder.amountOff=Order Amount Off
+entity.PromotionRewardOrder.discountType=Discount Type
+entity.PromotionRewardOrder.percentageOff=Order % Off
+entity.PromotionRewardProduct.amount=Item Fixed Price
+entity.PromotionRewardProduct.amountOff=Item Amount Off
 entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.discountType=Discount Type
 entity.PromotionRewardProduct.options=Options
+entity.PromotionRewardProduct.percentageOff=Item % Off
 entity.PromotionRewardProduct.roundingRule=Rounding Rule
+entity.PromotionRewardShipping.amount=Shipping Fixed Price
+entity.PromotionRewardShipping.amountOff=Shipping Amount Off
 entity.PromotionRewardShipping.discountType=Shipping Discount Type
+entity.PromotionRewardShipping.percentageOff=Shipping % Off
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
 entity.StockAdjustment.stockAdjustmentType=Type
