added new properties to promotionreward admin UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 05 20:53:30 EST 2012
+#Mon Mar 05 21:49:16 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -1237,10 +1237,12 @@ entity.promotionReward.rewardType=Reward Type
 entity.promotionReward.rewardType.Order=Order
 entity.promotionReward.rewardType.Product=Product
 entity.promotionReward.rewardType.Shipping=Shipping
-entity.promotionRewardProduct.itemRewardQuantity=Quantity
+entity.promotionRewardProduct.itemRewardQuantity=Quantity per Qualification
+entity.promotionRewardProduct.maximumOrderRewardQuantity=Max. Quanity per Order
 entity.promotionRewardProduct.productTypes=Product Types
 entity.promotionRewardProduct.products=Products
 entity.promotionRewardProduct.promotionRewards=Promotion Reward
+entity.promotionRewardProduct.rewardCanApplyToQualifierFlag=Include qualifier in Reward
 entity.promotionRewardProduct.skus=Sku
 entity.promotionRewardShipping.shippingMethod=Shipping Method
 entity.purchaseorder.createdDateTime=createdDateTime
