added PromotionQuaifier entities and relationships

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 05 21:49:16 EST 2012
+#Tue Mar 06 10:19:03 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -1239,6 +1239,7 @@ entity.promotionReward.rewardType.Product=Product
 entity.promotionReward.rewardType.Shipping=Shipping
 entity.promotionRewardProduct.itemRewardQuantity=Quantity per Qualification
 entity.promotionRewardProduct.maximumOrderRewardQuantity=Max. Quanity per Order
+entity.promotionRewardProduct.productContent=Product Content
 entity.promotionRewardProduct.productTypes=Product Types
 entity.promotionRewardProduct.products=Products
 entity.promotionRewardProduct.promotionRewards=Promotion Reward
