--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 06 10:19:03 EST 2012
+#Tue Mar 06 14:49:48 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -408,10 +408,12 @@ admin.promotion.delete_confirm=Are you sure you want to delete this promotion?
 admin.promotion.delete_nav=Delete
 admin.promotion.delete_success=Promotion was deleted successfully
 admin.promotion.detail=Promotion Detail
+admin.promotion.detail.addPromotionQualifier=Add Promotion Qualifier
 admin.promotion.detail.addPromotionReward=Add Promotion Reward
 admin.promotion.detail.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
 admin.promotion.detail.tabDescription=Description
 admin.promotion.detail.tabPromotionCodes=Promotion Codes
+admin.promotion.detail.tabPromotionQualifiers=Promotion Qualifiers
 admin.promotion.detail.tabPromotionRewards=Promotion Rewards
 admin.promotion.detail.tabSummary=Summary
 admin.promotion.detail_hint=View the Info page of a given Promotion
@@ -432,6 +434,7 @@ admin.promotion.editPromotion=Edit Promotion
 admin.promotion.editPromotionReward=Edit Promotion Reward
 admin.promotion.list=List Promotions
 admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
+admin.promotion.nopromotionqualifiersdefined=No Promotion Qualifiers have been defined.
 admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.promotionReward.item=Items
@@ -1225,6 +1228,18 @@ entity.promotionCode.maximumUseCount=Maximum Use Count
 entity.promotionCode.promotionCode=Promotion Code
 entity.promotionCode.promotionCode_validateUnique=This promotion code is already in use.
 entity.promotionCode.startDateTime=Start Date
+entity.promotionQualifier=Promotion Qualifier
+entity.promotionQualifier.qualifierType=Qualifier Type
+entity.promotionQualifier.qualifierType.fulfillment=Fulfillment
+entity.promotionQualifier.qualifierType.order=Order
+entity.promotionQualifier.qualifierType.product=Product
+entity.promotionQualifierProduct.brands=Brands
+entity.promotionQualifierProduct.maximumPrice=Maximum Item Price
+entity.promotionQualifierProduct.minimumPrice=Minimum Item Price
+entity.promotionQualifierProduct.minimumQuantity=Minimum Item Quantity
+entity.promotionQualifierProduct.productContent=Product Pages
+entity.promotionQualifierProduct.productTypes=Product Types
+entity.promotionQualifierProduct.products=Products
 entity.promotionReward=Promotion Reward
 entity.promotionReward.amount=Fixed Amount
 entity.promotionReward.amountOff=Amount Off
