more admin UI for promotion qualifiers

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 06 14:49:48 EST 2012
+#Tue Mar 06 16:04:36 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -1233,6 +1233,13 @@ entity.promotionQualifier.qualifierType=Qualifier Type
 entity.promotionQualifier.qualifierType.fulfillment=Fulfillment
 entity.promotionQualifier.qualifierType.order=Order
 entity.promotionQualifier.qualifierType.product=Product
+entity.promotionQualifierFulfillment.addressZones=Address Zones
+entity.promotionQualifierFulfillment.fulfillmentMethods=Fulfillment Methods
+entity.promotionQualifierFulfillment.maximumFulfillmentWeight=Maximum Weight
+entity.promotionQualifierFulfillment.minimumQuantity=Minimum Quantity
+entity.promotionQualifierFulfillment.shippingMethods=Shipping Methods
+entity.promotionQualifierOrder.minimumPrice=Minimum Order Total
+entity.promotionQualifierOrder.minimumQuantity=Minimum Order Quantity
 entity.promotionQualifierProduct.brands=Brands
 entity.promotionQualifierProduct.maximumPrice=Maximum Item Price
 entity.promotionQualifierProduct.minimumPrice=Minimum Item Price
