Implemented CRUD for product content and categories in promotion rewards

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 06 16:04:36 EST 2012
+#Thu Mar 08 10:38:57 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -822,6 +822,7 @@ entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
 entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
 entity.PriceGroupRate.roundingRule=Rounding Rule
+entity.PromotionQualifierProduct.productCategories=Product Categories
 entity.PromotionRewardOrder.amountOff=Order Amount Off
 entity.PromotionRewardOrder.discountType=Discount Type
 entity.PromotionRewardOrder.percentageOff=Order % Off
@@ -831,6 +832,7 @@ entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.discountType=Discount Type
 entity.PromotionRewardProduct.options=Options
 entity.PromotionRewardProduct.percentageOff=Item % Off
+entity.PromotionRewardProduct.productCategories=Product Categories
 entity.PromotionRewardProduct.roundingRule=Rounding Rule
 entity.PromotionRewardShipping.amount=Shipping Fixed Price
 entity.PromotionRewardShipping.amountOff=Shipping Amount Off
