CRUD for promotion reward order type

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 08 10:38:57 EST 2012
+#Thu Mar 08 13:41:02 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -1255,6 +1255,7 @@ entity.promotionReward.amountOff=Amount Off
 entity.promotionReward.delete_success=Promotion Reward Deleted
 entity.promotionReward.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
 entity.promotionReward.percentageOff=Percentage Off
+entity.promotionReward.promotionRewardType.order=Order
 entity.promotionReward.promotionRewardType.product=Product
 entity.promotionReward.promotionRewardType.shipping=Shipping
 entity.promotionReward.rewardType=Reward Type
