CRUD for promotion qualifiers

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 08 13:41:02 EST 2012
+#Thu Mar 08 14:40:55 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -437,6 +437,9 @@ admin.promotion.noShippingMethodsConfigured=There are currently no shipping meth
 admin.promotion.nopromotionqualifiersdefined=No Promotion Qualifiers have been defined.
 admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
+admin.promotion.promotionQualifier.item=Items
+admin.promotion.promotionQualifier.maximumPrice=Maximum Price
+admin.promotion.promotionQualifier.minimumPrice=Minimum Price
 admin.promotion.promotionReward.item=Items
 admin.promotion.promotionRewardProduct.discountType=Discount Type
 admin.promotion.promotionRewardProduct.discountType.amount=Fixed Amount
@@ -1231,6 +1234,9 @@ entity.promotionCode.promotionCode=Promotion Code
 entity.promotionCode.promotionCode_validateUnique=This promotion code is already in use.
 entity.promotionCode.startDateTime=Start Date
 entity.promotionQualifier=Promotion Qualifier
+entity.promotionQualifier.maximumPrice=Maximum Price
+entity.promotionQualifier.minimumPrice=Minimum Item/Total Price
+entity.promotionQualifier.minimumQuantity=Minimum Quantity
 entity.promotionQualifier.qualifierType=Qualifier Type
 entity.promotionQualifier.qualifierType.fulfillment=Fulfillment
 entity.promotionQualifier.qualifierType.order=Order
