Finished CRUD for promotion reward exclusions

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 08 14:40:55 EST 2012
+#Fri Mar 09 11:51:14 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -400,7 +400,15 @@ admin.promotion.deletePromotionCode=Delete Promotion Code
 admin.promotion.deletePromotionCode_confirm=Are you sure you want to delete this promotion code?
 admin.promotion.deletePromotionCode_disabled=Promotion code can not be deleted because it is in use
 admin.promotion.deletePromotionCode_success=Promotion code was deleted successfully
+admin.promotion.deletePromotionQualifier_confirm=Are you sure you want to delete this promotion qualifier?
+admin.promotion.deletePromotionQualifier_error=Promotion qualifier could not be deleted.
+admin.promotion.deletePromotionQualifier_success=Promotion qualifier deleted.
 admin.promotion.deletePromotionReward=Delete Promotion Reward
+admin.promotion.deletePromotionRewardExclusion=Delete Promotion Reward Exclusion
+admin.promotion.deletePromotionRewardExclusion_confirm=Are you sure you want to delete this promotion reward exclusion?
+admin.promotion.deletePromotionRewardExclusion_disabled=Promotion reward exclusion can not be deleted because it is in use.
+admin.promotion.deletePromotionRewardExclusion_error=An error occurred deleting the promotion reward exclusion.
+admin.promotion.deletePromotionRewardExclusion_success=Promotion reward exclusion deleted.
 admin.promotion.deletePromotionReward_confirm=Are you sure you want to delete this promotion reward?
 admin.promotion.deletePromotionReward_disabled=Promotion reward can not be deleted because it is in use
 admin.promotion.deletePromotionReward_success=Promotion Reward Deleted
@@ -410,10 +418,13 @@ admin.promotion.delete_success=Promotion was deleted successfully
 admin.promotion.detail=Promotion Detail
 admin.promotion.detail.addPromotionQualifier=Add Promotion Qualifier
 admin.promotion.detail.addPromotionReward=Add Promotion Reward
+admin.promotion.detail.addPromotionRewardExclusion=Add Promotion Reward Exclusion
 admin.promotion.detail.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
 admin.promotion.detail.tabDescription=Description
 admin.promotion.detail.tabPromotionCodes=Promotion Codes
+admin.promotion.detail.tabPromotionQualifierExclusions=Promotion Qualifier Exclusions
 admin.promotion.detail.tabPromotionQualifiers=Promotion Qualifiers
+admin.promotion.detail.tabPromotionRewardExclusions=Promotion Reward Exclusions
 admin.promotion.detail.tabPromotionRewards=Promotion Rewards
 admin.promotion.detail.tabSummary=Summary
 admin.promotion.detail_hint=View the Info page of a given Promotion
@@ -435,12 +446,14 @@ admin.promotion.editPromotionReward=Edit Promotion Reward
 admin.promotion.list=List Promotions
 admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
 admin.promotion.nopromotionqualifiersdefined=No Promotion Qualifiers have been defined.
+admin.promotion.nopromotionrewardexclusionsdefined=No Promotion Reward Exclusions have been defined.
 admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.promotionQualifier.item=Items
 admin.promotion.promotionQualifier.maximumPrice=Maximum Price
 admin.promotion.promotionQualifier.minimumPrice=Minimum Price
 admin.promotion.promotionReward.item=Items
+admin.promotion.promotionRewardExclusion.item=Items
 admin.promotion.promotionRewardProduct.discountType=Discount Type
 admin.promotion.promotionRewardProduct.discountType.amount=Fixed Amount
 admin.promotion.promotionRewardProduct.discountType.amountOff=Amount Off
@@ -1268,6 +1281,13 @@ entity.promotionReward.rewardType=Reward Type
 entity.promotionReward.rewardType.Order=Order
 entity.promotionReward.rewardType.Product=Product
 entity.promotionReward.rewardType.Shipping=Shipping
+entity.promotionRewardExclusion.brands=Brands
+entity.promotionRewardExclusion.options=Product Options
+entity.promotionRewardExclusion.productCategories=Product Categories
+entity.promotionRewardExclusion.productContent=Product Pages
+entity.promotionRewardExclusion.productTypes=Product Types
+entity.promotionRewardExclusion.products=Products
+entity.promotionRewardExclusion.skus=Skus
 entity.promotionRewardProduct.itemRewardQuantity=Quantity per Qualification
 entity.promotionRewardProduct.maximumOrderRewardQuantity=Max. Quanity per Order
 entity.promotionRewardProduct.productContent=Product Content
