Added front-end account views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -850,9 +850,6 @@ define.selectall=Select All
 define.true=True
 define.username=Username
 define.yes=Yes
-entity.Account.emailAddress=Email Address
-entity.Account.password=Password
-entity.Account.phoneNumber=Phone Number
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
@@ -882,10 +879,13 @@ entity.account.accountID=Account ID
 entity.account.accountName=Account Name
 entity.account.company=Company
 entity.account.delete_success=Account Deleted Successfully
+entity.account.emailAddress=Email Address
 entity.account.firstName=First Name
 entity.account.fullname=Name
 entity.account.lastName=Last Name
 entity.account.muraUser=Mura User
+entity.account.password=Password
+entity.account.phoneNumber=Phone Number
 entity.account.primaryEmailAddress=Account Primary Email Address
 entity.account.primaryPhoneNumber=Account Primary Phone Number
 entity.account.remoteContactID=Remote Contact ID
@@ -896,6 +896,7 @@ entity.accountaddress.account=account
 entity.accountaddress.accountAddressID=accountAddressID
 entity.accountaddress.accountAddressType=Address Type
 entity.accountaddress.address=Address
+entity.accountaddress.accountAddressName=Nick Name
 entity.accountemailaddress.account=Account
 entity.accountemailaddress.accountEmailAddressID=Account Email ID
 entity.accountemailaddress.emailaddress=Email Address
