Promotion qualifier exclusions CRUD

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Mar 09 11:51:14 EST 2012
+#Fri Mar 09 17:14:02 EST 2012
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -400,6 +400,10 @@ admin.promotion.deletePromotionCode=Delete Promotion Code
 admin.promotion.deletePromotionCode_confirm=Are you sure you want to delete this promotion code?
 admin.promotion.deletePromotionCode_disabled=Promotion code can not be deleted because it is in use
 admin.promotion.deletePromotionCode_success=Promotion code was deleted successfully
+admin.promotion.deletePromotionQualifierExclusion_confirm=Are you sure you want to delete this qualifier exclusion?
+admin.promotion.deletePromotionQualifierExclusion_disabled=Promotion qualifier exclusion cannot be deleted because it is in use
+admin.promotion.deletePromotionQualifierExclusion_error=An error occurred deleting the promotion qualifier exclusion.
+admin.promotion.deletePromotionQualifierExclusion_success=Promotion qualifier exclusion deleted.
 admin.promotion.deletePromotionQualifier_confirm=Are you sure you want to delete this promotion qualifier?
 admin.promotion.deletePromotionQualifier_error=Promotion qualifier could not be deleted.
 admin.promotion.deletePromotionQualifier_success=Promotion qualifier deleted.
@@ -417,6 +421,7 @@ admin.promotion.delete_nav=Delete
 admin.promotion.delete_success=Promotion was deleted successfully
 admin.promotion.detail=Promotion Detail
 admin.promotion.detail.addPromotionQualifier=Add Promotion Qualifier
+admin.promotion.detail.addPromotionQualifierExclusion=Add Promotion Qualifier Exclusion
 admin.promotion.detail.addPromotionReward=Add Promotion Reward
 admin.promotion.detail.addPromotionRewardExclusion=Add Promotion Reward Exclusion
 admin.promotion.detail.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
@@ -450,8 +455,7 @@ admin.promotion.nopromotionrewardexclusionsdefined=No Promotion Reward Exclusion
 admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.promotionQualifier.item=Items
-admin.promotion.promotionQualifier.maximumPrice=Maximum Price
-admin.promotion.promotionQualifier.minimumPrice=Minimum Price
+admin.promotion.promotionQualifierExclusion.item=Items
 admin.promotion.promotionReward.item=Items
 admin.promotion.promotionRewardExclusion.item=Items
 admin.promotion.promotionRewardProduct.discountType=Discount Type
@@ -1254,6 +1258,13 @@ entity.promotionQualifier.qualifierType=Qualifier Type
 entity.promotionQualifier.qualifierType.fulfillment=Fulfillment
 entity.promotionQualifier.qualifierType.order=Order
 entity.promotionQualifier.qualifierType.product=Product
+entity.promotionQualifierExclusion.brands=Brands
+entity.promotionQualifierExclusion.options=Options
+entity.promotionQualifierExclusion.productCategories=Product Categories
+entity.promotionQualifierExclusion.productContent=Product Pages
+entity.promotionQualifierExclusion.productTypes=Product Types
+entity.promotionQualifierExclusion.products=Products
+entity.promotionQualifierExclusion.skus=Skus
 entity.promotionQualifierFulfillment.addressZones=Address Zones
 entity.promotionQualifierFulfillment.fulfillmentMethods=Fulfillment Methods
 entity.promotionQualifierFulfillment.maximumFulfillmentWeight=Maximum Weight
