More changes for front-end account views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -902,6 +902,12 @@ entity.accountemailaddress.accountEmailAddressID=Account Email ID
 entity.accountemailaddress.emailaddress=Email Address
 entity.accountemailaddress.emailaddressconfirm=Confirm Email Address
 entity.accountemailaddress.isPrimary=isPrimary
+entity.accountPaymentMethodCreditCard.nameOnCreditCard=Name
+entity.accountPaymentMethodCreditCard.creditCardType=Card Type
+entity.accountPaymentMethodCreditCard.creditCardNumber=Credit Card Number
+entity.accountPaymentMethodCreditCard.creditCardLastFour=Credit Card
+entity.accountPaymentMethodCreditCard.expirationMonth=Expiration Month
+entity.accountPaymentMethodCreditCard.expirationYear=Expiration Year
 entity.accountphoneNumber.account=Account
 entity.accountphoneNumber.accountPhoneNumberID=Account Phone Number ID
 entity.accountphoneNumber.accountPhoneType=Account Phone Type
