Added relatedProducts and removed old references to old methodology.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -321,6 +321,7 @@ admin.product.detail.tab.productdetails=Product Details
 admin.product.detail.tab.productpages=Product Pages
 admin.product.detail.tab.productreviews=Product Reviews
 admin.product.detail.tab.productsettings=Product Settings
+admin.product.detail.tab.relatedproducts=Related Products
 admin.product.detail.tab.skus=SKUs
 admin.product.detail.tab.webdescription=Web Description
 admin.product.detailProductType.attributeSetAssigned=Assigned?
