Added Slatwall Tab on content edit

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -999,9 +999,13 @@ entity.cartitem.cartItemID=cartItemID
 entity.cartitem.quantity=quantity
 entity.cartitem.sku=sku
 entity.comment.comment=Comment
-entity.contentproduct.contentID=contentID
-entity.contentproduct.contentProductID=contentProductID
-entity.contentproduct.product=product
+entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
+entity.content.productListingFlag=Use as a product listing page
+entity.content.showProductInSubPagesFlag=Show product in sub pages
+entity.content.disableProductAssignmentFlag=Disable product assignment
+entity.content.defaultProductsPerPage=Number of Products per page in listing
+entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
+entity.content.allowPurchaseFlag=Allow purchase
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
 entity.createdByAccount=Created By
