more updates to UI for bootstrap

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,4 +1,3 @@
-
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -22,12 +21,7 @@ admin.account.save=Save Account
 admin.account.save_nav=Save
 admin.account.save_success=The Account was sucessfully saved
 admin.account_nav=Accounts
-admin.attribute=Attribute Set Manager
-admin.attribute.addAttribute=Add Attribute
-admin.attribute.addOption=Add Option
-admin.attribute.attributeOptionLabel=Label (optional)
-admin.attribute.attributeOptionValue=Value
-admin.attribute.closeForm=Close
+admin.attribute.addAttributeOption=Add Option
 admin.attribute.createAttributeSet=Create Attribute Set
 admin.attribute.default=Attribute Dashboard
 admin.attribute.delete=Delete Attribute
@@ -61,23 +55,20 @@ admin.attribute.saveAttributeSet_success=The Attribute Set was successfully save
 admin.attribute.saveAttributeSort=Save Attribute Sort Order
 admin.attribute.saveOrder=Save Order
 admin.attribute.save_success=The Attribute was successfully saved
-admin.brand=Brand Manager
-admin.brand.create=Create New Brand
-admin.brand.default=Brand Dashboard
-admin.brand.delete=Delete Brand
-admin.brand.delete_confirm=Are you sure you want to delete this brand?
-admin.brand.delete_disabled=Brand can not be deleted because it is in use
-admin.brand.delete_nav=Delete
-admin.brand.delete_success=Brand was deleted successfully
-admin.brand.detail=Brand Detail
-admin.brand.detail_hint=View the Info page of a given Brand
-admin.brand.detail_permission=View Brand Info
-admin.brand.edit=Edit Brand
-admin.brand.list=List Brands
-admin.brand.nobrandsdefined=There are currently no product brands defined.
-admin.brand.save=Save Brand
-admin.brand.save_nav=Save
-admin.brand.save_success=Brand was saved successfully
+admin.product.createbrand=Create New Brand
+admin.product.deletebrand=Delete Brand
+admin.product.deletebrand_confirm=Are you sure you want to delete this brand?
+admin.product.deletebrand_disabled=Brand can not be deleted because it is in use
+admin.product.deletebrand_nav=Delete
+admin.product.deletebrand_success=Brand was deleted successfully
+admin.product.detailbrand=Brand Detail
+admin.product.detailbrand_hint=View the Info page of a given Brand
+admin.product.detailbrand_permission=View Brand Info
+admin.product.editbrand=Edit Brand
+admin.product.listbrands=List Brands
+admin.product.listbrands.nobrandsdefined=There are currently no product brands defined.
+admin.product.savebrand=Save Brand
+admin.product.savebrand_success=Brand was saved successfully
 admin.help=Help
 admin.help.about=About Slatwall
 admin.help.default=Help Dashboard
